Added ability to test integration and some more complex functions.

--- a/Source/CalcEngine.Tests/CalcEngine.Tests.csproj
+++ b/Source/CalcEngine.Tests/CalcEngine.Tests.csproj
@@ -63,7 +63,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MathTrigTests.cs" />
+    <Compile Include="ComplexExcelFunctionTests.cs" />
+    <Compile Include="BasicExcelFunctionTests.cs" />
+    <Compile Include="IntegrationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
