--- a/Source/CalcEngineDemo/CalcEngineDemo/CalcEngineDemo.csproj
+++ b/Source/CalcEngineDemo/CalcEngineDemo/CalcEngineDemo.csproj
@@ -10,8 +10,8 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CalcEngineDemo</RootNamespace>
     <AssemblyName>CalcEngineDemo</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkProfile></TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>
     </SccProjectName>
