Insert info about creating NuGet package.

--- a/Source/CalcEngine/CalcEngine/CalcEngine.csproj
+++ b/Source/CalcEngine/CalcEngine/CalcEngine.csproj
@@ -1,13 +1,31 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Title>CalcEngine</Title>
+    <Title>CalcEngine.Net</Title>
     <Description>A Calculation Engine for .NET</Description>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageId>CalcEngine.Net</PackageId>
+    <Authors>Bernardo Castilho</Authors>
+    <Company>Bernardo Castilho</Company>
+    <PackageLicenseFile>license.txt</PackageLicenseFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageProjectUrl>https://github.com/Bernardo-Castilho/CalcEngine</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Properties\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\license.txt">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
