--- a/Source/CalcEngine/CalcEngine/CalcEngine.csproj
+++ b/Source/CalcEngine/CalcEngine/CalcEngine.csproj
@@ -11,6 +11,7 @@
     <PackageLicenseFile>license.txt</PackageLicenseFile>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageProjectUrl>https://github.com/Bernardo-Castilho/CalcEngine</PackageProjectUrl>
+	<VersionPrefix>1.1.0</VersionPrefix>
   </PropertyGroup>
 
   <ItemGroup>
